# te

./: README.md  dune-project  flake.nix  shell.nix  te.opam
lib/bot/: balanced_binary_tree.ml  dot.ml  graph.ml  map.ml  multimap.ml  multimap.mli  prelude.ml  refine.ml  relation.ml  relation.mli  set.ml  size.ml  size.mli  supply.ml  supply.mli
lib/core/: driver.ml  dune  fa.ml  glr.ml  gsglr.ml  notation.txt  re.ml  re.mli  spec.ml  tables.ml  tn.ml  types.ml  types.mli
lib/te-bot/: balanced_binary_tree.ml  comp_set.ml  dune  graph.ml  map.ml  prelude.ml  refine.ml  set.ml  supply.ml  supply.mli  vector.ml
lib/te-core/: dune  fa.ml  re.ml  re.mli  tn.ml  tn.mli  types.ml  types.mli
lib/te_bot/: balanced_binary_tree.ml  bijection.ml  closure.ml  comp_set.ml  dot.mli  fixedpoint.ml  graph.ml  map.ml  multimap.ml  multimap.mli  packed_forest.ml  prelude.ml  refine.ml  size.ml  vector.ml
lib/te_core/: actions.ml  fa.ml  fa2.ml  gsglr.ml  gss.ml  notation.txt  re.ml  re.mli  spec.ml  tables.ml  tables2.ml  tn.ml  tn.mli  tn2.ml  trace.ml  types.ml  types.mli
lib/top/: benchmark.ml  dune
test/: dune
test/code/: dune  te_code_test.ml
test/comp_set/: dune  te_comp_set_test.ml
test/fa/: dune  te_fa_test.ml
test/parser/: dune  te_parser_test.ml
test/re/: dune  te_re_test.ml
test/subset/: dune  te_subset_test.ml
